pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libfapbvpgtk.pc

iconsdir = $(pkgdatadir)/icons
dist_icons_DATA = \
	     img/tbar_btn_state.png \
	     img/tbar_btn_trans.png \
	     img/tbar_btn_syst.png


SUBDIRS = src

#datadir = @datadir@/fap-bvp-gtk

EXTRA_DIST = \
	     img/tbar_btn_state.png \
	     img/tbar_btn_trans.png \
	     img/tbar_btn_syst.png
	
