pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libfapbvpgtk.pc

SUBDIRS = src

iconsdir = $(pkgdatadir)/icons
dist_icons_DATA = \
	     img/tbar_btn_state.png \
	     img/tbar_btn_trans.png \
	     img/dect_btn_less.png \
	     img/dect_btn_more.png \
	     img/tbar_btn_syst.png


vconfdir = $(pkgdatadir)/conf
dist_vconf_DATA = \
	     etc/cag_proxy.rc

EXTRA_DIST = \
	     img/tbar_btn_state.png \
	     img/tbar_btn_trans.png \
	     img/dect_btn_less.png \
	     img/dect_btn_more.png \
	     img/tbar_btn_syst.png \
	     etc/cag_proxy.rc
	
