includedir = @includedir@/fapbvpgtk

AM_CPPFLAGS = -D_PLAT_LINUX_ -g -O0

lib_LTLIBRARIES = libfapbvpgtk.la

libfapbvpgtk_la_SOURCES = \
		       capcommon.h \
		       capopwnd.cpp \
		       capopwnd.h \
		       capdect.cpp \
		       capdect.h \
		       capbutton.cpp \
		       capbutton.h \
		       capcterm.cpp \
		       capcterm.h \
		       capcp.cpp \
		       capcp.h \
		       capstate.cpp \
		       capstate.h \
		       capcomp.cpp \
		       capcomp.h \
		       capsys.cpp \
		       capsys.h \
		       cagstyle.cpp \
		       cagstyle.h \
		       cagproxy.cpp \
		       cagproxy.h \
		       widgets.cpp \
		       widgets.h \
		       cagcontainer.cpp \
		       cagcontainer.h \
		       cagbox.cpp \
		       cagbox.h \
		       caglayout.cpp \
		       caglayout.h \
		       cagmisc.cpp \
		       cagmisc.h \
		       caglabel.cpp \
		       caglabel.h \
		       cagbin.cpp \
		       cagbin.h \
		       cagtextview.cpp \
		       cagtextview.h \
		       cagbutton.cpp \
		       cagbutton.h \
		       cagmenu.cpp \
		       cagmenu.h \
		       cagtoolbar.cpp \
		       cagtoolbar.h \
		       cagwindow.cpp \
		       cagwindow.h 

include_HEADERS = \
		  cagproxy.h


libfapbvpgtk_la_LDFLAGS = -rdynamic -no-undefined
