includedir = @includedir@/fapbvpgtk

AM_CPPFLAGS = -D_PLAT_LINUX_ -g -O0

lib_LTLIBRARIES = libfapbvpgtk.la

libfapbvpgtk_la_SOURCES = \
		       capcommon.h \
		       capopwnd.cpp \
		       capopwnd.h \
		       capmiscwid.cpp \
		       capmiscwid.h \
		       capdect.cpp \
		       capdect.h \
		       capbutton.cpp \
		       capbutton.h \
		       capcterm.cpp \
		       capcterm.h \
		       capcp.cpp \
		       capcp.h \
		       caplogdlg.cpp \
		       caplogdlg.h \
		       capstate.cpp \
		       capstate.h \
		       capcomp.cpp \
		       capcomp.h \
		       capsys.cpp \
		       capsys.h \
		       cagstyle.cpp \
		       cagstyle.h \
		       cagproxy.cpp \
		       cagproxy.h \
		       cagprov.cpp \
		       cagprov.h \
		       widgets.cpp \
		       widgets.h \
		       cagcontainer.cpp \
		       cagcontainer.h \
		       cagpaned.cpp \
		       cagpaned.h \
		       cagbox.cpp \
		       cagbox.h \
		       caglayout.cpp \
		       caglayout.h \
		       cagmisc.cpp \
		       cagmisc.h \
		       caglabel.cpp \
		       caglabel.h \
		       cagentry.cpp \
		       cagentry.h \
		       cagdialog.cpp \
		       cagdialog.h \
		       cagimage.cpp \
		       cagimage.h \
		       cagbin.cpp \
		       cagbin.h \
		       cagtextview.cpp \
		       cagtextview.h \
		       cagbutton.cpp \
		       cagbutton.h \
		       cagmenu.cpp \
		       cagmenu.h \
		       cagtoolbar.cpp \
		       cagtoolbar.h \
		       cagwindow.cpp \
		       mainwndiface.h \
		       cagwindow.h 

include_HEADERS = \
		  cagprov.h \
		  widgets.h \
		  cagbin.h \
		  cagproxy.h \
		  cagmenu.h \
		  cagcontainer.h \
		  cagbox.h \
		  cagtoolbar.h \
		  mainwndiface.h \
		  caglayout.h \
		  cagpaned.h \
		  cagtextview.h \
		  cagwindow.h 
     

libfapbvpgtk_la_LDFLAGS = -rdynamic -no-undefined
